# LLM-Document-Discovery

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  schema.sql  system_prompt.txt
config/: machines.yaml  platforms.yaml
container/: CLAUDE.md  entrypoint.sh  hpc_env.gpuhopper.sh  hpc_env.gpuvolta.sh  hpc_env.rtx4090.sh  pipeline.def
docs/: dependency-rationale.md  gadi-setup.md  resume-prompt.md  testing-plan-local-4090.md  ucloud-setup.md
docs/design-plans/: 2026-04-09-reproducible-demo.md  2026-04-11-gadi-deploy-automation.md  2026-04-12-apptainer-pipeline.md  2026-04-13-container-cli-verbs.md
docs/implementation-plans/2026-04-09-reproducible-demo/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/implementation-plans/2026-04-12-apptainer-pipeline/: phase_04.md
historical/20251104-FirstRun/: .gitignore  .gitmodules  CLAUDE.md  ELABORATION_PLAN.md  HPC_QUICKSTART.md  HPC_TRANSFER_CHECKLIST.md  HPC_WORKFLOW.md  RAY_RESEARCH_SUMMARY.md  README.md  README_BATCH_PROCESSING.md  REFACTOR_PROGRESS.md  TERMINAL_CHECKLIST.md  batch_to_db.py  calculate_vllm_params.py  generate_batch.py  hpc_env.sh  hpc_env_vars.sh  hpc_environment_report.txt  hpc_setup.sh  import_results.py  preflight_check.py  prep_db.py  process_corpus.sh  pull_demo.sh  pyproject.toml  results_timing.txt  run_batch.sh  run_corpus_loop.sh  run_tests_hpc.sh  run_unattended.sh  runner-notes.md  runner.sh  schema.sql  server_client.py  server_workload_multithreaded.py  start_server.sh  start_server_hpc.sh  sync_to_hpc.sh  unified_processor.py
historical/20251104-FirstRun/Elaborations/: README.md
historical/20251104-FirstRun/Elaborations/Elaboration01/: README.md  RESULTS.md  conftest.py  harmony_integration.py  test_harmony_integration.py
historical/20251104-FirstRun/Elaborations/Elaboration02/: README.md  RESULTS.md  conftest.py  test_multi_model_compatibility.py
historical/20251104-FirstRun/Elaborations/Elaboration03/: README.md  test_sqlite_thread_safety.py  thread_safe_db.py
historical/20251104-FirstRun/Elaborations/Elaboration04/: MANUAL_RUNS.md  README.md  RESULTS.md  batch_processor.py  conftest.py  run_manual.py  test_batch_performance.py
historical/20251104-FirstRun/Elaborations/Elaboration05/: README.md  RESULTS.md  SUBMISSION_GUIDE.md  hpc_job.sh  test_hpc_ollama_startup.sh  test_hpc_vllm_startup.py
historical/20251104-FirstRun/Elaborations/Elaboration06/: README.md  batch_to_db.py  conftest.py  generate_batch.py  generate_batch_full.py  parse_batch_results.py  process_corpus.sh  run_batch_timed.sh  test_http_harmony.py
historical/20251104-FirstRun/POC-prompts/: 02_explicit_age_child_references.yaml  03_corporate_register_markers.yaml  04_educational_register_markers.yaml  06_syntactic_irregularities.yaml  10_gendered_activities_objects.yaml  14_question_forms.yaml  15_first_person_plural_inclusivity.yaml  16_family.yaml  17_directed_at_kids.yaml  18_fanculture.yaml  21_conversations.yaml  22_governed_site.yaml  23_non_governed_site.yaml
historical/20251104-FirstRun/config/: machines.yaml
historical/20251104-FirstRun/docs/: README.md
historical/20251104-FirstRun/docs/architecture/: vllm_vs_ollama.md
historical/20251104-FirstRun/docs/elaborations/: index.md  lessons_learned.md
historical/20251104-FirstRun/docs/implementation/: vllm_migration.md
historical/20251104-FirstRun/tests/: conftest.py  test_batch_processing.py  test_config.py  test_database.py  test_harmony_integration.py  test_main_functions.py  test_split.py
hpc/: gadi.pbs.template  gadi.ping.template  ucloud_batch.sh
prompts/: 05_non_standard_spelling.yaml  07_topic_mixing_markers.yaml  08_age_identity_claims.yaml  09_gendered_direct_address.yaml  11_interactive_element_text.yaml  13_youth_slang_informality.yaml  15_first_person_plural_inclusivity.yaml  19_hobbies.yaml  20_computer_culture.yaml
scripts/: prepare_container_data.sh  process_corpus.sh  start_server.sh
src/llm_discovery/: __init__.py  cli.py  content_utils.py  fetch.py  fetch_warc.py  import_results.py  local_runner.py  platform.py  preflight_check.py  prep_db.py  unified_processor.py
tests/: conftest.py  test-pseudocode.md  test_build.py  test_container_e2e.py  test_fetch.py  test_import_results.py  test_init.py  test_platform.py  test_preflight.py  test_prep_db.py  test_unified_processor.py
