[project]
name = "llm-discovery"
version = "0.1.0"
description = "Reproducible pipeline for classifying historical web documents using LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-4.0"
dependencies = [
    "typer>=0.12.0",
    "rich>=14.0.0",
    "warcio>=1.7.0",
    "markdownify>=0.13.0",
    "requests>=2.32.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "datasette>=0.65.1",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.7.1",
    "fabric>=3.0",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.11.0",
]
dev = [
    "pytest>=9.0.1",
    "pre-commit>=4.0",
]

[project.scripts]
llm-discovery = "llm_discovery.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "B008",     # Typer uses function calls in argument defaults by design
    "PLR0913",  # Too many arguments (pipeline functions need many params)
    "PLR2004",  # Magic value comparison
    "S404",     # subprocess import (CLI tooling uses subprocess intentionally)
    "S603",     # subprocess call without shell check (controlled args in CLI)
    "S607",     # partial executable path (uv, tmux, rsync, etc.)
]

[tool.ruff.lint.per-file-ignores]
"src/llm_discovery/cli.py" = [
    "PLC0415",  # Lazy imports inside commands for Typer CLI startup speed
]
"tests/**/*.py" = [
    "PLC0415",  # Allow imports inside test functions (needed for mocking)
    "S101",     # Assertions are the primary test mechanism
    "S105",     # Hardcoded test tokens are intentional in test fixtures
    "S108",     # /tmp paths in test config are intentional
]

[tool.ruff.lint.isort]
known-first-party = ["llm_discovery"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "network: marks tests requiring network access (deselect with '-m \"not network\"')",
]
testpaths = ["tests"]
addopts = "-m 'not network and not gpu'"

[tool.ty.rules]
deprecated = "ignore"

[tool.complexipy]
paths = ["src/llm_discovery"]
max_complexity_allowed = 15
